<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	style="@style/ScreenBackground"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<LinearLayout
		android:id="@+id/form_container"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:focusable="true"
		android:focusableInTouchMode="true"
		android:orientation="vertical">

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/title"
			style="@style/Text.Title"
			android:layout_width="match_parent"
			android:layout_height="@dimen/title_view_height"
			android:text="@string/register_title" />

		<bank.payday.widgets.DefaultInput
			android:id="@+id/first_name_input"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/first_name_hint"
			android:imeOptions="actionNext"
			android:inputType="textNoSuggestions"
			android:title="@string/first_name"
			app:visibilityError="false" />

		<bank.payday.widgets.DefaultInput
			android:id="@+id/last_name_input"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/last_name_hint"
			android:imeOptions="actionNext"
			android:inputType="textNoSuggestions"
			android:title="@string/last_name"
			app:visibilityError="false" />

		<bank.payday.widgets.DefaultInput
			android:id="@+id/phone_input"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/phone_number_hint"
			android:imeOptions="actionNext"
			android:inputType="phone"
			android:title="@string/phone_number"
			app:visibilityError="false" />

		<bank.payday.widgets.DefaultInput
			android:id="@+id/email_input"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/email_hint"
			android:imeOptions="actionNext"
			android:inputType="textWebEmailAddress"
			android:title="@string/email"
			app:visibilityError="false" />

		<bank.payday.widgets.DefaultInput
			android:id="@+id/password_input"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/create_password_hint"
			android:imeOptions="actionNext"
			android:inputType="textPassword"
			android:title="@string/password"
			app:visibilityError="false" />

		<bank.payday.widgets.DefaultInput
			android:id="@+id/confirm_password_input"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/confirm_password_hint"
			android:imeOptions="actionNext"
			android:inputType="textPassword"
			android:title="@string/confirm_password"
			app:visibilityError="false" />

		<androidx.appcompat.widget.AppCompatTextView
			style="@style/Text.InputTitle.Margin"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/default_input_title_margin"
			android:text="@string/date_of_birth" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="@dimen/default_item_height"
			android:divider="@drawable/divider_transparent_v"
			android:orientation="horizontal"
			android:showDividers="middle">

			<androidx.appcompat.widget.AppCompatEditText
				android:id="@+id/day_input"
				style="@style/Input.Margin"
				android:layout_width="match_parent"
				android:layout_height="@dimen/default_item_height"
				android:layout_weight="1"
				android:hint="@string/b_day_hint"
				android:imeOptions="actionNext"
				android:inputType="number"
				android:maxLength="2" />

			<androidx.appcompat.widget.AppCompatEditText
				android:id="@+id/month_input"
				style="@style/Input.Margin"
				android:layout_width="match_parent"
				android:layout_height="@dimen/default_item_height"
				android:layout_weight="1"
				android:hint="@string/b_month_hint"
				android:imeOptions="actionNext"
				android:inputType="number"
				android:maxLength="2" />

			<androidx.appcompat.widget.AppCompatEditText
				android:id="@+id/year_input"
				style="@style/Input.Margin"
				android:layout_width="match_parent"
				android:layout_height="@dimen/default_item_height"
				android:layout_weight="1"
				android:hint="@string/b_year_hint"
				android:imeOptions="actionDone"
				android:inputType="number"
				android:maxLength="4" />
		</LinearLayout>

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/date_error"
			android:tag="error"
			style="@style/Text.InputTitle.Margin"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/default_input_error_margin"
			android:layout_marginBottom="@dimen/default_input_title_margin"			android:text="@string/error_date"
			android:textColor="@color/colorDefaultError"
			android:visibility="invisible"
			tools:visibility="visible" />

		<androidx.appcompat.widget.AppCompatTextView
			style="@style/Text.InputTitle.Margin"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/default_item_top_margin"
			android:layout_marginBottom="@dimen/default_input_title_margin"
			android:imeOptions="actionNext"
			android:text="@string/gender" />

		<RadioGroup
			android:id="@+id/gender_group"
			android:layout_width="match_parent"
			android:layout_height="@dimen/default_item_height"
			android:layout_marginStart="@dimen/default_horizontal_margin"
			android:layout_marginEnd="@dimen/default_horizontal_margin"
			android:focusable="true"
			android:focusableInTouchMode="true"
			android:gravity="start|center_vertical"
			android:orientation="horizontal">

			<RadioButton
				android:id="@+id/gender_male"
				style="@style/Text.RadioItem"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:checked="true"
				android:text="@string/male" />

			<RadioButton
				android:id="@+id/gender_female"
				style="@style/Text.RadioItem"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/default_horizontal_margin"
				android:text="@string/female" />
		</RadioGroup>

		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/default_item_top_margin">

			<androidx.appcompat.widget.AppCompatButton
				android:id="@+id/sign_up"
				style="@style/Button.Margin"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/sign_up" />

			<ProgressBar
				android:id="@+id/progress"
				style="@style/ProgressBar"
				android:layout_gravity="center"
				android:visibility="gone" />
		</FrameLayout>

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/sign_in"
			style="@style/Text.Button"
			android:layout_width="match_parent"
			android:layout_height="@dimen/default_item_height"
			android:text="@string/login" />
	</LinearLayout>
</androidx.core.widget.NestedScrollView>