<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	style="@style/ScreenBackground"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/title"
		style="@style/Text.Title"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:text="@string/title_welcome_back"
		app:layout_constraintBottom_toTopOf="@+id/linearLayout"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_weight="0.25" />

	<LinearLayout
		android:id="@+id/linearLayout"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:focusable="true"
		android:focusableInTouchMode="true"
		android:orientation="vertical"
		app:layout_constraintBottom_toTopOf="@+id/sign_up"
		app:layout_constraintTop_toBottomOf="@+id/title"
		app:layout_constraintVertical_weight="0.5">

		<androidx.appcompat.widget.AppCompatTextView
			style="@style/Text.InputTitle.Margin"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/default_input_title_margin"
			android:text="@string/login" />

		<androidx.appcompat.widget.AppCompatEditText
			android:id="@+id/login_input"
			style="@style/Input.Margin"
			android:layout_width="match_parent"
			android:layout_height="@dimen/default_item_height"
			android:hint="@string/login_hint"
			android:inputType="textWebEmailAddress" />

		<androidx.appcompat.widget.AppCompatTextView
			style="@style/Text.InputTitle.Margin"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/default_item_top_margin"
			android:layout_marginBottom="@dimen/default_input_title_margin"
			android:text="@string/enter_password_hint" />

		<androidx.appcompat.widget.AppCompatEditText
			android:id="@+id/password_input"
			style="@style/Input.Margin"
			android:layout_width="match_parent"
			android:layout_height="@dimen/default_item_height"
			android:hint="@string/enter_password_hint"
			android:inputType="textPassword" />

		<FrameLayout
			android:layout_marginTop="@dimen/default_item_top_margin"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<androidx.appcompat.widget.AppCompatButton
				android:id="@+id/sign_in"
				style="@style/Button.Margin"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/login" />

			<ProgressBar
				android:id="@+id/progress"
				android:visibility="gone"
				android:layout_width="@dimen/default_progress_size"
				android:layout_height="@dimen/default_progress_size"
				android:layout_gravity="center" />
		</FrameLayout>
	</LinearLayout>

	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/sign_up"
		style="@style/Text.Button"
		android:layout_width="match_parent"
		android:layout_height="@dimen/default_item_height"
		android:text="@string/register"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintVertical_weight="0.1" />
</androidx.constraintlayout.widget.ConstraintLayout>